# lepton-eda

./: .dir-locals.el  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.old  NEWS  NEWS.md  README  README.Cygwin  README.md  README.sol10  README.win32  autogen.sh  buildall.sh  configure.ac  gnet-space-noqsi.scm  gnet-spice-noqsi.scm  missing.h  pprint-chlog  scheme-path.scm  script.in  update-changelogs.sh  update-versions.sh  version.h.in
attrib/: .gitignore  Makefile.am  NOTES  README  ToDos  lepton-attrib.in
attrib/data/: Makefile.am  README  lepton-attrib.desktop.in
attrib/design/: Makefile.am  ProgramArchitecture.gnumeric
attrib/docs/: Makefile.am  lepton-attrib.1.in  lepton-attrib.dox  what-is-lepton-attrib.html
attrib/include/: Makefile.am  globals.h  gtksheet_2_2.h  i_vars.h  prototype.h  struct.h
attrib/lib/: .gitignore  Makefile.am  gattrib-menus.xml
attrib/m4/: .gitignore
attrib/po/: .gitignore  Makevars  POTFILES.in  af.po  ar.po  bg.po  bs.po  ca.po  da.po  de.po  el.po  en_GB.po  es.po  fa.po  fr.po  gl.po  hu.po  it.po  ja.po  lepton-attrib.pot  ml.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
attrib/src/: .gitignore  Makefile.am  f_export.c  g_register.c  globals.c  gtkextra-marshal.c  gtksheet_2_2.c  i_vars.c  lepton-attrib.c  parsecmd.c  s_attrib.c  s_misc.c  s_object.c  s_sheet_data.c  s_string_list.c  s_table.c  s_toplevel.c  s_visibility.c  x_dialog.c  x_gtksheet.c  x_window.c
cli/: .gitignore  Makefile.am  builtins.h  config.c  export.c  gaf.1.in  lepton-cli.1.in  lepton-cli.c  shell.c
cli/po/: .gitignore  Makevars  POTFILES.in  it.po  lepton-cli.pot  nl.po  ru.po
docs/: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS-1.9.2.txt  NEWS-1.9.3.md  NEWS-1.9.4.md  README  configure.ac  configure.in  gschem.txt
docs/attributes/: .cvsignore  Makefile  Makefile.am  attributes.tex  attributes.txt
docs/cascade/: .cvsignore  Makefile.am  cascade.tex  example.eps  example.sch
docs/changelogs/: Makefile.am  changelog.examples.gTAG  changelog.gsch2pcb  changelog.tragesym
docs/design/: Makefile.am
docs/fileformats/: .cvsignore  Makefile.am  alignment.eps  alignment.sch  coords.eps  coords.sch  fileformats.html  fileformats.tex
docs/gnetlist/: .cvsignore  Makefile.am  gnetlist.tex  gnetlist.txt
docs/gsch2pcb_tutorial/: Makefile.am  gschem-warmup.html  transistor-guide.html  tutorial-old.html  tutorial.html
docs/gschem/: .cvsignore  Makefile.am  gschem.tex  gschem.txt
docs/hooks/: Makefile.am  hooks_and_scheme.txt
docs/keymapping/: Makefile.am  README.keymapping  keymapping.html  keymapping.tex
docs/manual/: .gitignore  7400-1-hidden.eps  7400-1-hidden.sym  7400-1.eps  7400-1.sym  Makefile.am  attribute-net.texi  attributes.texi  cindex.texi  cmd-component.sh  communication.texi  configuration.texi  coordinate-space.eps  coordinate-space.sch  development.texi  example.cas  geda-file-format-spec.texi  glossary.texi  index.texi  installation.texi  lepton-attrib.texi  lepton-cli-config.texi  lepton-cli-export.texi  lepton-cli-shell.texi  lepton-cli.texi  lepton-eda-fonts.texi  lepton-manual.css  lepton-manual.texi  lepton-netlist-allegro.texi  lepton-netlist-backends.texi  lepton-netlist-bae.texi  lepton-netlist-bom.texi  lepton-netlist-bom2.texi  lepton-netlist-calay.texi  lepton-netlist-cascade.texi  lepton-netlist-command-line.texi  lepton-netlist-drc.texi  lepton-netlist-pads.texi  lepton-netlist-protelii.texi  lepton-netlist-running.texi  (+23 more)
docs/netattrib/: .cvsignore  Makefile.am  netattrib.tex  netattrib.txt
docs/news/: Makefile.am
docs/pads_backannotate/: .cvsignore  Makefile.am  pads_backannotate.tex
docs/scheme-api/: .gitignore  Makefile.am  geda-scheme.texi  lepton-scheme.css  lepton-scheme.texi
docs/scripts/: .cvsignore  .gitignore  Makefile.am  copygitignores.sh  copywip.sh  (+5 more)
examples/: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog-1.0  Makefile.am  README  configure.ac  configure.in
gaf/: .gitignore  Makefile.am  builtins.h  config.c  export.c  gaf.1  gaf.1.in  gaf.c  shell.c
gattrib/: .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog-1.0  Makefile.am  NEWS  NOTES  README  ToDos  autogen.sh  configure.ac  icon-theme-installer
geda/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  config.h.in  configure.ac  configure.in
gnetlist/: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog-1.0  INSTALL  Makefile.am  Makefile.in  README  README.bom  README.pcb  README.verilog  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
gschem/: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  VOCABULARY  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in  desktop-i18n  guile.m4  icon-theme-installer
gsymcheck/: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
lepton-eda/: Makefile.am  gschem-colormap-darkbg  lepton-gtkrc  print-colormap-darkbg  print-colormap-lightbg  system-gafrc  system-gschemrc
lib/: Makefile.am  attributes.cc  internal.h  key_iterator.h  obstate.cc  selection.cc  xornstorage.cc
libgeda/: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog-1.0  HACKING  INSTALL  Makefile.am  Makefile.in  README  README.gd  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in  libgeda-config.in  libgeda.pc.in  ltmain.sh
libgedacairo/: .gitignore  Makefile.am  README  edacairo.c  edacairo.h  edapangorenderer.c  edapangorenderer.h  edarenderer.c  edarenderer.h  libgedacairo.h  libgedacairo.pc.in
liblepton/: .gitignore  BUGS  Makefile.am  liblepton.pc.in
libleptonattrib/: .gitignore  Makefile.am  NOTES  README  lepton-attrib.in  lepton-attrib.scm  libleptonattrib.pc.in
(+9828 files in other folders)
